# claw

./: .env.example  .gitignore  OPENCLAW_SECURITY_VM_CODEX_PROMPT.md  OPENCLAW_SECURITY_VM_CODEX_PROMPT.zh-CN.md  OPENCLAW_TINYKVM_INTEGRATION_CODEX_PROMPT.md  OPENCLAW_TINYKVM_INTEGRATION_CODEX_PROMPT.zh-CN.md  README.md  README.zh-CN.md  RUNBOOK.md  RUNBOOK.zh-CN.md  WINDOWS_WSL2_DOCKER_CODEX_PROMPT.md  WINDOWS_WSL2_DOCKER_CODEX_PROMPT.zh-CN.md  compose.yaml
docs/: README.md  README.zh-CN.md  architecture.md  architecture.zh-CN.md  install.md  install.zh-CN.md  live-rdpwindows-beads.md  live-rdpwindows-beads.zh-CN.md  test-strategy.md  test-strategy.zh-CN.md  tinykvm-security-architecture.md  tinykvm-security-architecture.zh-CN.md  tinykvm.md  tinykvm.zh-CN.md  weixin.md  weixin.zh-CN.md
installer/: Build-OpenClawPortableBundle.ps1  Build-OpenClawPortableBundle.sh  BundleManifest.json  Export-OpenClawOfflinePayload.ps1  Export-OpenClawOfflinePayload.sh  README.md  README.zh-CN.md  Start-OpenClawPortableBundle.ps1  Test-OpenClawPortableBundle.ps1  build_portable_bundle.py  export_offline_payload.py
scripts/: Apply-OpenClawSystemdHardening.sh  Install-OpenClawPrereqs.ps1  Install-OpenClawStack.ps1  Install-OpenClawTinyKvmHost.sh  Install-TinyKvmTooling.sh  Invoke-OpenClawDeploymentValidation.ps1  OpenClaw.DeploymentValidation.ps1  OpenClaw.WeixinPackaging.ps1  Validate-OpenClawTinyKvmHost.sh  openclaw-tinykvm-run.sh
tests/: OpenClaw.DeploymentValidation.Tests.ps1
tinykvm-runner/: CMakeLists.txt  openclaw_tinykvm_runner.cpp
vm/: README.md  README.zh-CN.md
(+18 files in other folders)
